src/index.css
:root {
    font-size: 10pt;
    --darkColor: #b6b9a7;
    --middleColor: #c3d0c3;
    --middleColor2: #e1e8ce;
    --middleColor3: #f7f9ef;
    --lightColor: #FAFFFB;
    --textMain: #000;
    --textAlt: #444;
    --sideMargin: 1.8rem;
}

html,
body {
    margin: 0;
    width: 100%;
    height: 100%;
    font-family: arial;
}

* {
    box-sizing: border-box;
    color: var(--textMain);
}

#siteTitle {
    font-weight: normal;
    height: 2rem;
    position: absolute;
    left: var(--sideMargin);
    top: var(--sideMargin);
    display: flex;
    align-items: center;
}

#siteTitleText {
    font-weight: normal;
    color: var(--textAlt);
    font-size: 1.2rem;
    margin: 0;
    margin-left: 1em;
}

#siteLogo {
    height: 150%;
}

#siteAbout {
    font-size: 1.2rem;
    color: var(--textAlt);
    margin-left: 1em;
    text-decoration: underline;
    cursor: pointer;
}

#aboutContainer {
    left: 0;
    top: 0;
    display: flex;
    width: 100%;
    height: 100%;
    align-items: center;
    position: absolute;
    transition: visibility 0.5s, opacity 0.5s;
    background: #FFF;
    visibility: hidden;
}

#aboutContent {
    color: var(--textAlt);
    font-size: 1.2rem;
    margin: auto;
    text-align: center;
    line-height: 1.5em;
}

#container {
    height: 100%;
    width: 65%;
    display: flex;
    align-items: center;
    justify-content: center;
    transition: width 0.5s;
    position: relative;
}

.graph {
    width: 100%;
    height: 100%;
}

#topicView {
    width: 100%;
    height: 100%;
}

.node {
    cursor: pointer;
    transition: opacity 0.25s;
}

.nodeNonClickable {
    user-select: none;
    transition: opacity 0.25s;
}

.nodeTextBox {
    text-align: center;
    padding-left: 0.8em;
    padding-right: 0.8em;
    user-select: none;
    pointer-events: none;
    font-size: 1rem;
}

.nodeTextBoxBody {
    display: flex;
    align-items: center;
    justify-content: center;
}

.nodeTitleBox {
    cursor: default;
    user-select: none;
    pointer-events: none;
}

.nodeTitleBox_ {
    cursor: default;
    user-select: none;
    pointer-events: none;
}

.nodeLecturer {
    letter-spacing: 0.05em;
    font-size: 1rem;
    text-transform: uppercase;
}

.nodeDate {
    letter-spacing: 0.05em;
    margin-top: 0.25em;
    font-size: 0.7rem;
    color: var(--textAlt);
}

.nodeTitle {
    font-size: 0.7rem;
    margin-top: 0.25em;
}

